컨트롤러에 다 연결완료

--- a/src/main/resources/templates/follow.html
+++ b/src/main/resources/templates/follow.html
@@ -25,10 +25,10 @@
 
 
     <title>instagram</title>
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/common.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="shortcut icon" href="../static/imgs/instagram.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/imgs/instagram.png">
 
     <style>
 
@@ -87,7 +87,7 @@
                     <header class="top">
                         <div class="user_container">
                             <div class="profile_img">
-                                <img src="../static/imgs/thumb.jpeg" alt="">
+                                <img src="/imgs/thumb.jpeg" alt="">
                             </div>
                             <div class="user_name">
                                 <div class="nick_name">KindTiger</div>
@@ -99,7 +99,7 @@
 
                     <div class="img_section">
                         <div class="trans_inner">
-                            <div><img src="../static/imgs/img_section/img02.jpg" alt=""></div>
+                            <div><img src="/imgs/img_section/img02.jpg" alt=""></div>
                         </div>
                     </div>
 
