--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
         <section class="inner">
 
             <h1 class="logo">
-                <a href="index.html">
+                <a href="/index/main">
                     <div class="sprite_insta_icon"></div>
                     <div class="sprite_write_logo"></div>
                 </a>
@@ -44,10 +44,10 @@
             </div>
 
             <div class="right_icons">
-                <a href="new_post.html"><div class="sprite_camera_icon"></div></a>
-                <a href="login.html"><div class="sprite_compass_icon"></div></a>
-                <a href="follow.html"><div class="sprite_heart_icon_outline"></div></a>
-                <a href="profile.html"><div class="sprite_user_icon_outline"></div></a>
+                <a href="/index/new_post"><div class="sprite_camera_icon"></div></a>
+                <a href="/index/login"><div class="sprite_compass_icon"></div></a>
+                <a href="/index/follow"><div class="sprite_heart_icon_outline"></div></a>
+                <a href="/index/profile"><div class="sprite_user_icon_outline"></div></a>
             </div>
 
         </section>
@@ -177,7 +177,7 @@
                     <header class="top">
                         <div class="user_container">
                             <div class="profile_img">
-                                <img src="../static/imgs/thumb.jpeg" alt="프로필이미지">
+                                <img src="/imgs/thumb.jpeg" alt="프로필이미지">
                             </div>
                             <div class="user_name">
                                 <div class="nick_name m_text">KindTiger</div>
@@ -243,7 +243,7 @@
                     <header class="top">
                         <div class="user_container">
                             <div class="profile_img">
-                                <img src="../static/imgs/thumb.jpeg" alt="프로필이미지">
+                                <img src="/imgs/thumb.jpeg" alt="프로필이미지">
                             </div>
                             <div class="user_name">
                                 <div class="nick_name m_text">KindTiger</div>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="detail">
                         <div class="id m_text">KindTiger</div>
-                        <div class="ko_name">심선범</div>
+                        <div class="ko_name">윤창근</div>
                     </div>
                 </div>
 
@@ -406,15 +406,6 @@
                         </div>
                         <div class="thumb_user">
                             <div class="profile_thumb">
-                                <img src="../static/imgs/thumb02.jpg" alt="프로필사진">
-                            </div>
-                            <div class="detail">
-                                <div class="id">kind_tigerrrr</div>
-                                <div class="time">1시간 전</div>
-                            </div>
-                        </div>
-                        <div class="thumb_user">
-                            <div class="profile_thumb">
                                 <img src="/imgs/thumb02.jpg" alt="프로필사진">
                             </div>
                             <div class="detail">
@@ -433,7 +424,16 @@
                         </div>
                         <div class="thumb_user">
                             <div class="profile_thumb">
-                                <img src="../static/imgs/thumb02.jpg" alt="프로필사진">
+                                <img src="/imgs/thumb02.jpg" alt="프로필사진">
+                            </div>
+                            <div class="detail">
+                                <div class="id">kind_tigerrrr</div>
+                                <div class="time">1시간 전</div>
+                            </div>
+                        </div>
+                        <div class="thumb_user">
+                            <div class="profile_thumb">
+                                <img src="/imgs/thumb02.jpg" alt="프로필사진">
                             </div>
                             <div class="detail">
                                 <div class="id">kind_tigerrrr</div>
@@ -460,7 +460,7 @@
                     </div>
                     <div class="thumb_user">
                         <div class="profile_thumb">
-                            <img src="../static/imgs/thumb02.jpg" alt="프로필사진">
+                            <img src="/imgs/thumb02.jpg" alt="프로필사진">
                         </div>
                         <div class="detail">
                             <div class="id">kind_tigerrrr</div>
