--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="../static/css/common.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/login.css">
-    <link rel="shortcut icon" href="../static/imgs/instagram.png">
+    <link rel="shortcut icon" href="/imgs/instagram.png">
 
 </head>
 <body>
@@ -120,6 +120,6 @@
 </section>
 
 
-<script src="../static/js/insta.js"></script>
+<script src="/js/insta.js"></script>
 </body>
 </html>
