--- a/src/main/resources/templates/detail-page.html
+++ b/src/main/resources/templates/detail-page.html
@@ -28,11 +28,11 @@
 
 
     <title>instagram</title>
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/common.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/detail-page.css">
-    <link rel="shortcut icon" href="../static/imgs/instagram.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/detail-page.css">
+    <link rel="shortcut icon" href="/imgs/instagram.png">
 
 
     <style>
@@ -89,7 +89,7 @@
 
                     <div class="img_section">
                         <div class="trans_inner">
-                            <div><img src="../static/imgs/img_section/img03.jpg" alt=""></div>
+                            <div><img src="/imgs/img_section/img03.jpg" alt=""></div>
                         </div>
                     </div>
 
@@ -99,7 +99,7 @@
                         <header class="top">
                             <div class="user_container">
                                 <div class="profile_img">
-                                    <img src="../static/imgs/thumb.jpeg" alt="">
+                                    <img src="/imgs/thumb.jpeg" alt="">
                                 </div>
                                 <div class="user_name">
                                     <div class="nick_name">KindTiger</div>
@@ -118,7 +118,7 @@
 
                         <section class="scroll_section">
                             <div class="admin_container">
-                                <div class="admin"><img src="../static/imgs/thumb.jpeg" alt="user"></div>
+                                <div class="admin"><img src="/imgs/thumb.jpeg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">Kindtiger</span>강아지가 많이 힘든가보다ㅜㅜㅜㅜㅜ조금만힘내
                                     <div class="time">2시간</div>
@@ -126,7 +126,7 @@
                             </div>
 
                             <div class="user_container-detail">
-                                <div class="user"><img src="../static/imgs/thumb02.jpg" alt="user"></div>
+                                <div class="user"><img src="/imgs/thumb02.jpg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                                     <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -142,7 +142,7 @@
                             </div>
 
                             <div class="user_container-detail">
-                                <div class="user"><img src="../static/imgs/thumb03.jpg" alt="user"></div>
+                                <div class="user"><img src="/imgs/thumb03.jpg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">ye_solkim</span>강아지 이름이 뭐에요???
                                     <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="user_container-detail">
-                                <div class="user"><img src="../static/imgs/thumb02.jpg" alt="user"></div>
+                                <div class="user"><img src="/imgs/thumb02.jpg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                                     <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -174,7 +174,7 @@
                             </div>
 
                             <div class="user_container-detail">
-                                <div class="user"><img src="../static/imgs/thumb03.jpg" alt="user"></div>
+                                <div class="user"><img src="/imgs/thumb03.jpg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">in0.lee</span>너무귀엽네요
                                     <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -190,7 +190,7 @@
                             </div>
 
                             <div class="user_container-detail">
-                                <div class="user"><img src="../static/imgs/thumb02.jpg" alt="user"></div>
+                                <div class="user"><img src="/imgs/thumb02.jpg" alt="user"></div>
                                 <div class="comment">
                                     <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                                     <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
