--- a/src/main/resources/templates/new_post.html
+++ b/src/main/resources/templates/new_post.html
@@ -25,11 +25,11 @@
 
 
     <title>instagram</title>
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/common.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/new_post.css">
-    <link rel="shortcut icon" href="../static/imgs/instagram.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/new_post.css">
+    <link rel="shortcut icon" href="/imgs/instagram.png">
 
 </head>
 <body>
