--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,10 @@
       th:href="@{/css/common.css}"  rel="stylesheet">
 <link href="../css/bootstrap.min.css"
       th:href="@{/css/login.css}"  rel="stylesheet">
+<link href="../css/bootstrap.min.css"
+      th:href="@{/css/style.css}"  rel="stylesheet">
+<link href="../css/bootstrap.min.css"
+      th:href="@{/css/reset.css}"  rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -44,36 +48,7 @@
 
 
 
-    <header id="header" >
-
-        <section class="h_inner">
-
-            <h1 class="logo">
-                <a href="index.html">
-                    <div class="sprite_insta_icon"></div>
-                    <div>
-                        <div class="sprite_write_logo"></div>
-                    </div>
-                </a>
-            </h1>
-
-            <div class="search_field">
-                <input type="text" placeholder="검색" tabindex="0">
-
-                <div class="fake_field">
-                    <span class=sprite_small_search_icon></span>
-                    <span>검색</span>
-                </div>
-            </div>
-
-
-            <div class="right_icons">
-                <a href="new_post.html"><div class="sprite_camera_icon"></div></a>
-                <a href="login.html"><div class="sprite_compass_icon"></div></a>
-                <a href="follow.html"><div class="sprite_heart_icon_outline"></div>윤창근</a>
-                <a href="profile.html"><div class="sprite_user_icon_outline"></div></a>
-            </div>
-        </section>
+    <header id="header" th:replace="fragments/header :: header">    </header>
     </header>
 
 
