--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,12 +25,19 @@
 
 
     <title>instagram</title>
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/common.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/profile.css">
+<!--    <link rel="stylesheet" href="../static/css/reset.css">-->
+<!--    <link rel="stylesheet" href="../static/css/common.css">-->
+<!--    <link rel="stylesheet" href="../static/css/style.css">-->
+<!--    <link rel="stylesheet" href="../static/css/profile.css">-->
     <link rel="shortcut icon" href="../static/imgs/instagram.png">
-
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/common.css}"  rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/login.css}"  rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/style.css}"  rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/reset.css}"  rel="stylesheet">
 
 </head>
 <body>
@@ -38,35 +45,7 @@
 
 <section id="container">
 
-    <header id="header">
-        <section class="h_inner">
-
-            <h1 class="logo">
-                <a href="index.html">
-                    <div class="sprite_insta_icon"></div>
-                    <div>
-                        <div class="sprite_write_logo"></div>
-                    </div>
-                </a>
-            </h1>
-
-            <div class="search_field">
-                <input type="text" placeholder="검색" tabindex="0">
-
-                <div class="fake_field">
-                    <span class=sprite_small_search_icon></span>
-                    <span>검색</span>
-                </div>
-            </div>
-
-
-            <div class="right_icons">
-                <a href="new_post.html"><div class="sprite_camera_icon"></div></a>
-                <a href="login.html"><div class="sprite_compass_icon"></div></a>
-                <a href="follow.html"><div class="sprite_heart_icon_outline"></div></a>
-                <a href="profile.html"><div class="sprite_user_icon_outline"></div></a>
-            </div>
-        </section>
+    <header id="header" th:replace="fragments/header :: header">    </header>
     </header>
 
 
